0.9.7.2
* Added ssl support for future version of mongodb (EXPERIMENTAL)
	* pass in the ssl:true option to the server or replicaset server config to enable
	* a bug either in mongodb or node.js does not allow for more than 1 connection pr server.
* Added getTimestamp() method to objectID that returns a date object

0.9.7.1-2 2011-11-27
* Set statistical selection strategy as default for secondary choice.

0.9.7.1-1 2011-11-27
* Better handling of single server reconnect (fixes some bugs)
* Better test coverage of single server failure
* Correct handling of callbacks on replicaset servers when firewall dropping packets, correct reconnect

0.9.7.1 2011-11-24
* Better handling of dead server for single server instances
* FindOne and find treats selector == null as {}, Issue #403
* Possible to pass in a strategy for the replicaset to pick secondary reader node 
	* parameter strategy
		* ping (default), pings the servers and picks the one with the lowest ping time
		* statistical, measures each request and pick the one with the lowest mean and std deviation
* Set replicaset read preference replicaset.setReadPreference()
	* Server.READ_PRIMARY (use primary server for reads)
	* Server.READ_SECONDARY (from a secondary server (uses the strategy set))
	* tags, {object of tags}
* Added replay of commands issued to a closed connection when the connection is re-established
* Fix isConnected and close on unopened connections. Issue #409, fix by (https://github.com/sethml)
* Moved reaper to db.open instead of constructor (Issue #406)
* Allows passing through of socket connection settings to Server or ReplSetServer under the option socketOptions
  	* timeout = set seconds before connection times out (default 0)
	* noDelay = Disables the Nagle algorithm (default true)
	* keepAlive = Set if keepAlive is used (default 0, which means no keepAlive, set higher than 0 for keepAlive)
	* encoding = ['ascii', 'utf8', or 'base64'] (default null)